fix(actionbutton): high contrast adjustments
- Fix for high contrast border styles not being solid.
- Quiet variants no longer show a border and blend into background with
  Canvas and CanvasText color pair.
- Focus indicator color changed from ButtonText to CanvasText,
  because this indicator appears outside of the element (it does not
  appear on top of a ButtonFace background).

--- a/components/actionbutton/index.css
+++ b/components/actionbutton/index.css
@@ -247,6 +247,7 @@ governing permissions and limitations under the License.
 	border-radius: var(--mod-actionbutton-border-radius, var(--spectrum-actionbutton-border-radius));
 	border-width: var(--spectrum-actionbutton-border-width);
 	border-color: var(--highcontrast-actionbutton-border-color, var(--spectrum-actionbutton-border-color));
+	border-style: solid;
 
 	gap: calc(var(--mod-actionbutton-text-to-visual, var(--spectrum-actionbutton-text-to-visual)) + (var(--mod-actionbutton-edge-to-text, var(--spectrum-actionbutton-edge-to-text)) - var(--mod-actionbutton-edge-to-visual-only, var(--spectrum-actionbutton-edge-to-visual-only))));
 
@@ -356,11 +357,31 @@ a.spectrum-ActionButton {
 @media (forced-colors: active) {
 	.spectrum-ActionButton {
 		&::after {
-			/* make sure focus indicator renders */
+			/* make sure the box-shadow for the focus indicator renders */
 			forced-color-adjust: none;
 		}
 
-		--highcontrast-actionbutton-focus-indicator-color: ButtonText;
+		--highcontrast-actionbutton-focus-indicator-color: CanvasText;
+		--highcontrast-actionbutton-background-color-disabled: ButtonFace;
+		--highcontrast-actionbutton-content-color-disabled: GrayText;
+
+		&.spectrum-ActionButton--quiet {
+			--highcontrast-actionbutton-border-color: Canvas;
+			--highcontrast-actionbutton-background-color-default: Canvas;
+			--highcontrast-actionbutton-background-color-hover: Canvas;
+			--highcontrast-actionbutton-background-color-focus: Canvas;
+			--highcontrast-actionbutton-background-color-down: Canvas;
+			--highcontrast-actionbutton-background-color-disabled: Canvas;
+
+			--highcontrast-actionbutton-content-color-default: CanvasText;
+			--highcontrast-actionbutton-content-color-hover: CanvasText;
+			--highcontrast-actionbutton-content-color-focus: CanvasText;
+			--highcontrast-actionbutton-content-color-down: CanvasText;
+
+			&:disabled {
+				--highcontrast-actionbutton-border-color: Canvas;
+			}
+		}
 
 		&:hover,
 		&:active,
@@ -373,21 +394,18 @@ a.spectrum-ActionButton {
 			--highcontrast-actionbutton-background-color-hover: Highlight;
 			--highcontrast-actionbutton-background-color-focus: Highlight;
 			--highcontrast-actionbutton-background-color-down: Highlight;
-			--highcontrast-actionbutton-background-color-disabled: ButtonFace;
 
 			--highcontrast-actionbutton-content-color-default: HighlightText;
 			--highcontrast-actionbutton-content-color-hover: HighlightText;
 			--highcontrast-actionbutton-content-color-focus: HighlightText;
 			--highcontrast-actionbutton-content-color-down: HighlightText;
-			--highcontrast-actionbutton-content-color-disabled: GrayText;
 
 			--highcontrast-actionbutton-border-color: Highlight;
 
 			.spectrum-ActionButton-icon,
 			.spectrum-ActionButton-hold,
 			.spectrum-ActionButton-label {
-				/* ensure custom text colors from above get applied */
-				/* it seems like this shouldn't have to be done, but colors are wrong without it */
+				/* Fix for unwanted additional background color ("readability backplate"). */
 				forced-color-adjust: none;
 			}
 		}
